manageridepat.html mainly (see details below)
1. add remark to GetRidePatView method
2. add equipemtns icons (png)
3. some new styles to the new makeover
4.  create global function addSeperator2MobileNum in master.js
5. over all makeover of manageridepat.html - a lot of work arround buildtable function
6. patientform and volunteer form now support go back functionality (since it reachable from more then 1 place)

--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -1185,7 +1185,11 @@
             var errorElement = 'em';
             $('#PatientIdentity_ErrorMsg').hide();
 
-            let existingPatients = JSON.parse(GENERAL.PATIENTS.getPatients());
+            let existingPatients = [];
+            if (GENERAL.PATIENTS.getPatients() !== '') {
+                existingPatients = JSON.parse(GENERAL.PATIENTS.getPatients());
+            }
+               
 
             $('#PatientIdentity').blur(function () {
 
