--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1266,13 +1266,13 @@
         }
 
         const showMe = (spanElement, objName) => {
-           
+
             const displayName = spanElement.innerHTML;
             const func = 'edit';
             const arr_details = { displayName, func };
 
             switch (objName) {
-                case 'patient': 
+                case 'patient':
                     GENERAL.PATIENTS.setPatientsList(JSON.stringify(arr_details));
                     location.href = "patientForm.html";
                     break;
@@ -1299,8 +1299,11 @@
 
                     if (validateMobileNum(arr_rides[i].Escorts[0].CellPhone)) {
 
-                        phone2render = `<span class="phone2render">${arr_rides[i].Escorts[0].DisplayName}:
-                                        ${addSeperator2MobileNum(arr_rides[i].Escorts[0].CellPhone, '-')}</span>`;
+                        let es = arr_rides[i].Escorts[0];
+                        phone2render = es.IsAnonymous ? 
+                            `<span class="phone2render">מלווה: ${addSeperator2MobileNum(es.CellPhone, '-')}</span>` :
+                            `<span class="phone2render">${es.DisplayName}: ${addSeperator2MobileNum(es.CellPhone, '-')}</span>`;
+
                     } else if (validateMobileNum(arr_rides[i].Pat.CellPhone)) {
 
                         phone2render = `<span class="phone2render">${addSeperator2MobileNum(arr_rides[i].Pat.CellPhone, '-')}</span>`;
@@ -1308,13 +1311,24 @@
                 } else {
                     thisrp_escorts_span = `<span class="numOfEscorts">${arr_rides[i].Escorts.length} מלווים</span>`;
 
-                    arr_rides[i].Escorts.map((es) => {
-                        phone2render +=
-                            validateMobileNum(es.CellPhone) ?
-                                `<span class="phone2render">${es.DisplayName}: ${addSeperator2MobileNum(es.CellPhone, '-')}</span>`
-                                :
-                                `<span class="phone2render">${es.DisplayName}: סלולארי לא תקין</span>`;
-                    });
+                    for (let j = 0; j < arr_rides[i].Escorts.length; j++) {
+
+                        if (validateMobileNum(arr_rides[i].Escorts[j].CellPhone)) {
+                            let es  = arr_rides[i].Escorts[j];
+                            phone2render += es.IsAnonymous ?
+                                `<span class="phone2render">מלווה: ${addSeperator2MobileNum(es.CellPhone, '-')}</span>` :
+                                `<span class="phone2render">${es.DisplayName}: ${addSeperator2MobileNum(es.CellPhone, '-')}</span>`;
+                            break;
+                        }
+                        if (j === arr_rides[i].Escorts.length - 1) {//last one + didn't execute the break;
+                            if (validateMobileNum(arr_rides[i].Pat.CellPhone)) {
+                                phone2render = `<span class="phone2render">${addSeperator2MobileNum(arr_rides[i].Pat.CellPhone, '-')}</span>`;
+                            } else {
+                                phone2render = `<span class="numOfEscorts">אין מס' נייד תקין במערכת</span>`;
+                            }
+                        }
+
+                    }
                 }
 
             } else {
@@ -1324,6 +1338,7 @@
                     phone2render = `<span class="numOfEscorts">אין מס' נייד תקין במערכת</span>`;
                 }
             }
+            
             if (arr_rides[i].Pat.Equipment.length > 0) {
 
                 equipments = `<div class="equipments">`;
@@ -1343,7 +1358,7 @@
                 //arr_rides[i].Pat.DisplayName = "חולה";
                 patientName2render = "<span>חולה</span>";
             } else {
-                patientName2render = `<span onclick='showMe(this, "patient")' class='clickable' id='${arr_rides[i].Pat.Id}'>${arr_rides[i].Pat.DisplayName}</span>`;
+                patientName2render = `<span onclick='showMe(this, "patient")' class='blueFont clickable' id='${arr_rides[i].Pat.Id}'>${arr_rides[i].Pat.DisplayName}</span>`;
                 patient_English_Name2render = `<span onclick='showMe(this, "patient")' class='clickable' id='${arr_rides[i].Pat.Id}'>${arr_rides[i].Pat.EnglishName}</span>`;
             }
             if (arr_rides[i].Status.indexOf("ממתינה לשיבוץ") !== -1 || (arr_rides[i].Status.indexOf("אין נסיעת הלוך") !== -1 && arr_rides[i].Status.indexOf("ויש נהג משובץ") === -1)) {
@@ -1422,7 +1437,7 @@
 
                 //we use to have an option for 2nd driver but no more
 
-                let driver = `<span class="driverName clickable" onclick='showMe(this, "volunterr")'>${arr_rides[i].Drivers[0].DisplayName}</span>`;
+                let driver = `<span class="driverName clickable blueFont" onclick='showMe(this, "volunterr")'>${arr_rides[i].Drivers[0].DisplayName}</span>`;
                 driver += `<span class="driverCellPhone">${addSeperator2MobileNum(arr_rides[i].Drivers[0].CellPhone, '-')}</span>`;
 
                 //#region old code for driver
