--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1312,15 +1312,15 @@
                     thisrp_escorts_span = `<span class="numOfEscorts">${arr_rides[i].Escorts.length} מלווים</span>`;
 
                     let notOneEscort_WithValidCellPhone = true;
-                    arr_rides[i].Escorts.map((es, index) => {
+                    arr_rides[i].Escorts.map((es, index, arr) => {
                         if (validateMobileNum(es.CellPhone)) {
                             notOneEscort_WithValidCellPhone = false;
                             phone2render += es.IsAnonymous ?
                                 `<span class="phone2render">מלווה: ${addSeperator2MobileNum(es.CellPhone, '-')}</span>` :
                                 `<span class="phone2render">${es.DisplayName}: ${addSeperator2MobileNum(es.CellPhone, '-')}</span>`;
                         }
-                        if (index === arr_rides[i].Escorts.length - 1 &&
-                            notOneEscort_WithValidCellPhone) {//last one and no escort with valid cellphone
+                        if (index === arr.length - 1 && notOneEscort_WithValidCellPhone) {
+                            //last one and no escort with valid cellphone
                             if (validateMobileNum(arr_rides[i].Pat.CellPhone)) {
                                 phone2render = `<span class="phone2render">${addSeperator2MobileNum(arr_rides[i].Pat.CellPhone, '-')}</span>`;
                             } else {
