Border for earliest futire ride

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -127,9 +127,15 @@
         #documentedRidesTable > tbody > tr:nth-child(odd).futureRide > th {
             background-color: #f7e4a8;
         }
+
         #documentedRidesTable > tbody > tr:nth-child(even).futureRide > td,
         #documentedRidesTable > tbody > tr:nth-child(even).futureRide > th {
             background-color: #f7edcd;
+        }
+
+        #documentedRidesTable > tbody > tr.earliestFuture > td,
+        #documentedRidesTable > tbody > tr.earliestFuture > tr {
+            border-bottom: 4px solid #9B4040;
         }
     </style>
 
